--- a/2_Progress_Steps/index.html
+++ b/2_Progress_Steps/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width = device-width, initial-scale-1.0" />
     <link rel="stylesheet" href="style.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    /> -->
-    <title>My project</title>
+    <title>Progress steps</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <script src="scripts.js"></script>
+    <div class="container">
+      <!-- ---------------------------------------------- -->
+      <div class="progress-container">
+        <!-- Line  -->
+        <div class="progress" id="progress"></div>
+
+        <!-- Circles  -->
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
+        <div class="circle">5</div>
+        <div class="circle">6</div>
+        <div class="circle">7</div>
+        <div class="circle">8</div>
+        <div class="circle">9</div>
+        <div class="circle">10</div>
+      </div>
+
+      <!-- ------------------------------------------------------- -->
+      <button class="btn" id="prev" disabled>Previous</button>
+      <button class="btn" id="next">Next</button>
+    </div>
+
+    <!-- ------------------------------------------------ -->
+    <script src="script.js"></script>
   </body>
 </html>
